TRY AGAIN to fix distorted fonts on some mobiles

--- a/src/styles/sass/_preset.scss
+++ b/src/styles/sass/_preset.scss
@@ -6,12 +6,16 @@
 
 html {
     height: 100%;
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 body {
     min-height: 100%;
     font-family: system-ui, sans-serif;
+    font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
 }
 
 h1,
